# soft

./: .build.yml  .drone.yml  .gitignore  CMakeLists.txt  Makefile  README.md  soft-vm.c  soft-vm.h
include/lib/: hashtable.h
include/preprocessor/: preprocessor.h
include/utils/: charstream.h  helpers.h
include/vm/: datatypes.h  instructions.h  registers.h  soft-vm.h  sval.h  syscalls.h
src/: CMakeLists.txt  soft.c  soft.h  softc.c
src/assembler/: assembler.c  assembler.h  keywords.c  keywords.h  tokenizer.c  tokenizer.h
src/preprocessor/: preprocessor.c  preprocessor.h
src/utils/: charstream.c  charstream.h  helpers.c  helpers.h  tagged-pointer.c  tagged-pointer.h
src/vm/: datatypes.h  instructions.h  opcodes.h  registers.c  registers.h  soft-vm.c  soft-vm.h  sval.c  sval.h  syscalls.c  syscalls.h
tests/: CMakeLists.txt  instr-tests.c  preprocessor-tests.c  soft-test.c  soft-test.h  sval-tests.c  utils-tests.c
tests/assembler/: assembler-test.h  assembler.c  tokenizer.c
tests/preprocessor/: preprocessor-test.h  preprocessor.c
tests/utils/: charstream.c  hashtable.c  helpers.c  tagged-pointer.c  util-test.h
tests/vm/: arithmetic.c  binary.c  bitwise.c  comparison.c  jump.c  load.c  mov.c  stack.c  store.c  sval.c  vm-test.h
